add changePassword endpoint
