# base-backend/src/main/java/com/samkruglov/base/api/AuthController.java
@@ -1,13 +1,17 @@
 package com.samkruglov.base.api;
 
+import com.samkruglov.base.api.config.Current;
 import com.samkruglov.base.api.config.OpenApiConfig;
+import com.samkruglov.base.api.view.ChangePasswordDto;
 import com.samkruglov.base.api.view.CredentialsDto;
 import com.samkruglov.base.api.view.JwtDto;
+import com.samkruglov.base.domain.User;
 import com.samkruglov.base.service.AuthService;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
 import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -25,5 +29,10 @@ public class AuthController {
     @PostMapping("/login")
     public JwtDto login(@RequestBody CredentialsDto credentials) {
         return new JwtDto(service.login(credentials).serialize());
+    }
+
+    @PutMapping("/change-password")
+    public void changePassword(@Current User user, @RequestBody ChangePasswordDto changePasswordDto) {
+        service.changePassword(user, changePasswordDto);
     }
 }
