# base-backend/src/main/java/com/samkruglov/base/api/view/ChangePasswordDto.java
@@ -1,0 +1,9 @@
+package com.samkruglov.base.api.view;
+
+import lombok.Value;
+
+@Value
+public class ChangePasswordDto {
+    String oldPassword;
+    String newPassword;
+}
