# base-backend/src/main/java/com/samkruglov/base/service/error/BaseErrorType.java
@@ -6,7 +6,8 @@ import lombok.RequiredArgsConstructor;
 public enum BaseErrorType {
     INTERNAL_ERROR(0, 500, "Internal error"),
     USER_NOT_FOUND(1, 404, "User not found"),
-    EMAIL_ALREADY_EXISTS(2, 400, "Email already exists");
+    EMAIL_ALREADY_EXISTS(2, 400, "Email already exists"),
+    OLD_PASSWORD_DOES_NOT_MATCH(3, 400, "Old password does not match");
 
     public final int errorCode;
     public final int httpStatusCode;
